--- a/index.html
+++ b/index.html
@@ -178,16 +178,23 @@
             <div
                 class="bento-card col-span-1 md:col-span-4 lg:col-span-4 lg:row-span-2 p-8 md:p-12 flex flex-col justify-between group">
                 <div class="relative z-10">
-                    <h1 class="text-5xl md:text-7xl lg:text-8xl font-bold tracking-tight mb-6 text-white leading-[0.9]">
+                    <h1 class="text-5xl md:text-7xl lg:text-8xl font-bold tracking-tight mb-4 text-white leading-[0.9]">
                         Aryan <br /> <span
                             class="text-muted group-hover:text-white transition-colors duration-500">Bhimani.</span>
                     </h1>
-                    <p class="text-xl md:text-2xl text-muted max-w-2xl font-light">
-                        Founder of <a href="https://mobintix.app/" target="_blank"
-                            class="text-accent hover:underline decoration-1 underline-offset-4">Mobintix Infotech</a>.
-                        <br />
-                        Architecting the next generation of digital experiences.
-                    </p>
+                    <div class="mb-6">
+                        <p class="text-accent font-mono text-xs md:text-sm uppercase tracking-wider mb-2">
+                            Full Stack Engineer | Mobile App Developer | Project Manager
+                        </p>
+                        <p class="text-lg md:text-xl text-muted max-w-2xl font-light leading-relaxed">
+                            Founder of <a href="https://mobintix.app/" target="_blank"
+                                class="text-white hover:text-accent transition-colors">Mobintix Infotech 🚀</a>.
+                            <br />
+                            We design and build modern digital solutions. Specialized in <span
+                                class="text-white">Android (Java & Kotlin)</span> & <span class="text-white">Flutter
+                                (Dart)</span>.
+                        </p>
+                    </div>
                 </div>
                 <div class="mt-8 flex gap-4">
                     <a href="#work"
@@ -222,13 +229,13 @@
             <div
                 class="bento-card col-span-1 md:col-span-2 lg:col-span-2 lg:row-span-1 p-6 flex flex-col justify-center overflow-hidden">
                 <span class="text-xs font-mono text-muted uppercase mb-4">Core Stack</span>
-                <div class="flex gap-4 opacity-50">
-                    <!-- Simple text-based icons for clean look -->
-                    <span class="text-lg font-bold">React</span>
-                    <span class="text-lg font-bold">Node</span>
-                    <span class="text-lg font-bold">Python</span>
-                    <span class="text-lg font-bold">AWS</span>
-                    <span class="text-lg font-bold">AI</span>
+                <div class="flex gap-4 opacity-70 flex-wrap">
+                    <span class="text-lg font-bold hover:text-accent transition-colors">Android</span>
+                    <span class="text-lg font-bold hover:text-accent transition-colors">Flutter</span>
+                    <span class="text-lg font-bold hover:text-accent transition-colors">Kotlin</span>
+                    <span class="text-lg font-bold hover:text-accent transition-colors">Dart</span>
+                    <span class="text-lg font-bold hover:text-accent transition-colors">Firebase</span>
+                    <span class="text-lg font-bold hover:text-accent transition-colors">MySQL</span>
                 </div>
             </div>
 
@@ -278,12 +285,30 @@
                 </div>
             </div>
 
-            <!-- 6. Service / Offer -->
+            <!-- 6. Skills & Expertise -->
             <div
-                class="bento-card col-span-1 md:col-span-2 lg:col-span-3 lg:row-span-1 p-8 bg-gradient-to-br from-surface to-accent/5 flex flex-col justify-center">
-                <h3 class="text-xl font-bold text-white mb-2">Build The Future</h3>
-                <p class="text-muted text-sm mb-4">Have a visionary idea? I help founders and companies translate
-                    concepts into code.</p>
+                class="bento-card col-span-1 md:col-span-2 lg:col-span-3 lg:row-span-1 p-6 bg-gradient-to-br from-surface to-accent/5 flex flex-col justify-center">
+                <h3 class="text-xl font-bold text-white mb-4 flex items-center gap-2">
+                    🛠️ Skills & Expertise
+                </h3>
+                <div class="grid grid-cols-2 gap-x-4 gap-y-2 text-sm text-muted">
+                    <div class="flex flex-col">
+                        <span class="text-accent font-mono text-xs uppercase mb-1">Mobile Dev</span>
+                        <span>Android (Java, Kotlin, XML), Flutter (Dart)</span>
+                    </div>
+                    <div class="flex flex-col">
+                        <span class="text-accent font-mono text-xs uppercase mb-1">Backend</span>
+                        <span>Firebase, MySQL, REST APIs</span>
+                    </div>
+                    <div class="flex flex-col mt-2">
+                        <span class="text-accent font-mono text-xs uppercase mb-1">Project Mgmt</span>
+                        <span>Agile, Scrum, Jira, Trello</span>
+                    </div>
+                    <div class="flex flex-col mt-2">
+                        <span class="text-accent font-mono text-xs uppercase mb-1">Tools</span>
+                        <span>Git, CI/CD, Cloud Services</span>
+                    </div>
+                </div>
                 <a href="#contact"
                     class="inline-flex items-center text-accent text-sm font-bold hover:gap-2 transition-all">
                     Start a Project <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
