--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <!-- SEO Meta Tags -->
     <meta name="description"
-        content="Portfolio of Aryan Bhimani, Founder of Mobintix Infotech. Architecting the next generation of digital experiences in Suart. Expert in React, Node, and AI.">
+        content="Portfolio of Aryan Bhimani, Founder of Mobintix Infotech. Architecting the next generation of digital experiences in Surat. Expert in React, Node, and AI.">
     <meta name="keywords"
-        content="Aryan Bhimani, Mobintix Infotech, Founder, Full Stack Developer, Suart, Web Development, React, Node.js, AI, Portfolio 2026">
+        content="Aryan Bhimani, Mobintix Infotech, Founder, Full Stack Developer, Surat, Web Development, React, Node.js, AI, Portfolio 2026">
     <meta name="author" content="Aryan Bhimani">
     <link rel="canonical" href="https://aryanbhimani.me/">
 
@@ -220,7 +220,7 @@
                     <div
                         class="translate-y-4 group-hover:translate-y-0 opacity-0 group-hover:opacity-100 transition-all duration-300">
                         <span class="text-accent font-mono text-xs uppercase mb-1 block">Location</span>
-                        <span class="text-white font-semibold">Suart, IN</span>
+                        <span class="text-white font-semibold">Surat, IN</span>
                     </div>
                 </div>
             </div>
