--- a/index.html
+++ b/index.html
@@ -57,35 +57,8 @@
         rel="stylesheet">
 
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-                        sans: ['Manrope', 'sans-serif'],
-                        mono: ['JetBrains Mono', 'monospace'],
-                    },
-                    colors: {
-                        bg: '#09090b', // Zinc 950
-                        surface: '#18181b', // Zinc 900
-                        border: '#27272a', // Zinc 800
-                        accent: '#ccff00', // Neon Lime
-                        accent2: '#00ccff', // Cyan
-                        text: '#e4e4e7', // Zinc 200
-                        muted: '#a1a1aa', // Zinc 400
-                    },
-                    backgroundImage: {
-                        'grid-pattern': "linear-gradient(to right, #27272a 1px, transparent 1px), linear-gradient(to bottom, #27272a 1px, transparent 1px)",
-                    },
-                    animation: {
-                        'spin-slow': 'spin 12s linear infinite',
-                        'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-                    }
-                }
-            }
-        }
-    </script>
+    <!-- Tailwind CSS -->
+    <link rel="stylesheet" href="./assets/css/style.css">
     <style>
         body {
             background-color: #09090b;
