--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <a href="#contact" class="hover:text-accent transition-colors">Contact</a>
             </nav>
             <div class="flex items-center gap-4">
-                <a href="mailto:aryan@mobintix.app"
+                <a href="mailto:contact@mobintix.app"
                     class="hidden md:block px-5 py-2 rounded-full border border-border hover:bg-surface hover:text-white transition-all text-xs font-mono uppercase tracking-wide">
                     Get in touch
                 </a>
@@ -341,7 +341,8 @@
         </footer>
 
         <div class="text-center mt-12 mb-4 text-xs text-muted font-mono">
-            © <span id="current-year"></span> Aryan Bhimani. Founder, Mobintix Infotech.
+            © <span id="current-year"></span> Aryan Bhimani. Founder, Mobintix Infotech. | Developed by Mobintix
+            Infotech.
         </div>
 
     </div>
